# Scrivener_Bot

./: .gitignore  Cargo.toml  HOW_TO.md  README.md  icon.ase
src/: config.rs  language_parsing.rs  macros.rs  main.rs  state.rs  stats.rs  utils.rs
src/commands/: dump_messages.rs  feedback.rs  helpers.rs  init_channel.rs  mod.rs  server_summary.rs  show_channels.rs  show_stats.rs  word_cloud.rs
wordcloud/: word_cloud_worker.py
