[package]
name = "Scrivener"
version = "1.0.0"
authors = ["Jonty <jon.heiser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1.1", features = ["macros", "rt-multi-thread", "process"] }
serenity = "0.10"
chrono = "0.4.19"
log = "0.4.14"
simplelog = "0.9.0"
serde = "1.0.123"
ron = "0.6.4" # -> Can't use to serialise the state, does not round trip, idk why
# serde-lexpr = "0.1.2" -> Cant use to serialise the state, stack overflows
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
sysinfo = "0.16.1"
unidecode = "0.3.0"
strum = "0.20"
strum_macros = "0.20.1"
bincode = "1.3.2"